2006-04-05  Jan Schmidt  <thaytan@mad.scientist.com>

	* HACKING:
	  Add some simple notes on how the data directory is maintained

2006-04-04  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/documentation/index.xml:
	  Split out the gst-plugins-base library documentation, since
	  it has a different version number to the core.

2006-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/page.xsl:
	  add a contact address in a footnote on pages

2006-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/plugins.xsl:
	  add a note on why some links are broken.  See #323798

2006-03-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.1.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.3.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	  releases of ffmpeg and ugly

2006-03-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-python/0.10.3.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	  releasing

2006-03-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* planet/config.ini:
	  Change philn's feed to the RSS1. Escaped HTML in a CDATA
	  section doesn't seem to translate into planet properly.

2006-03-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/www-update:
	* planet/config.ini:
	* src/copy/download/gstreamer-0.10-apps.repo:
	* src/copy/download/gstreamer-0.10-deps.repo:
	* src/copy/download/gstreamer-0.10-gst.repo:
	* src/htdocs/download/Makefile.am:
	* src/htdocs/download/fedora5.xml:
	* src/htdocs/download/index.xml:
	  add the Fedora Core 5 repository, plus repo files, and change
	  the way we handle fedora package repository

2006-03-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* planet/config.ini: