@@ -1,0 +1,14 @@
+releases =
+
+built_pages = \
+	$(releases) \
+	$(releases:=.html)
+
+style = ../releases.xsl
+
+$(built_pages): $(style) ../text.xsl
+
+%: %.xml
+	xsltproc -o $@ $(srcdir)/../text.xsl $<
+
+include $(top_srcdir)/html.make
