@@ -1,0 +1,46 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gnonlin</module>
+  <module-fancy>GNonLin Non-Linear Editing Plug-ins</module-fancy>
+  <name></name>
+  <version></version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of
+GNonLin.
+</p>
+
+<p>
+This module contains a set of plug-ins useful for non-linear editing.
+
+They are primarily used by PiTiVi, the non-linear editor.
+
+</p>
+  </intro>
+  <features>
+    <feature></feature>
+  </features>
+
+  <applications>
+GNonLin is primarily used by PiTiVi.
+  </applications>
+  <contributors>
+</contributors>
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  <bugs>
+  </bugs>
+
+</release>
